--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 								<h3>Neirad Article Generator</h3> <!-- title --> 
 							</header>
 							<div class="image fit">
-								<img src="DHS%20Programming-old/dhsprogramming.com/img/portfolio/NeiradDemo.png" alt="" /> <!-- image url -->
+								<img src="DHS%20dhsprogramming.com/img/portfolio/NAG.png" alt="" /> <!-- image url -->
 							</div>
 							<p>A Java application that automatically creates stories for the school newspaper.</p> <!-- description -->
 							<ul class="actions">
